Added script to pull videos from AWS, script to place user gaze on video (lenny's code), starter code for eda, updated README with folder structure

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,9 @@
 ffmpeg==1.4
 pymongo
+python-dotenv==1.0.1
+boto3==1.36.16
+pandas==2.2.3
+scipy==1.11.4
+opencv-python==4.11.0.86
+numpy==1.23.5
+ipykernel
